Fix: Add padding for footer od desktop, correct padding top on mobile

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -311,7 +311,7 @@ h3 {
 }
 
 .footer {
-	padding: 1.5rem 0 4rem;
+	padding: 4rem 0;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -319,7 +319,11 @@ h3 {
 	gap: 3.5rem;
 
 	@include media(medium) {
-		padding: 5rem 0 7.625rem;
+		padding: 5rem 0 7.5rem;
+	}
+
+	@include media(medium) {
+		padding-top: 3.75rem;
 	}
 
 	.socials {
